--- a/src/components/home-comps/trusted-by/index.module.less
+++ b/src/components/home-comps/trusted-by/index.module.less
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 16px 0 24px;
+  padding: 32px 0 40px;
 }
 
 // Wide outer container for commanding presence
